# chronos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
chronos/: __init__.py
chronos/benchmarks/: __init__.py  metrics.py  runner.py
chronos/communication/: __init__.py  compression.py  sparse.py
chronos/continuum/: __init__.py  memory.py  timescale.py
chronos/core/: __init__.py  problem.py  state.py  version.py
chronos/distributed/: __init__.py  coordinator.py  protocols.py  worker.py
chronos/solver/: __init__.py  implicit_diff.py  unrolled.py
chronos/utils/: __init__.py  logging.py
examples/: hyperclean.py
tests/: conftest.py  test_communication.py  test_continuum.py  test_core_state.py  test_core_version.py
