[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronos"
version = "0.1.0"
description = "Distributed Nested Optimization Framework with HOPE"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chronos Team" }
]
keywords = [
    "deep-learning",
    "meta-learning",
    "bilevel-optimization",
    "distributed-training",
    "hyperparameter-optimization"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyzmq>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
examples = [
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/chronos-ml/chronos"
Documentation = "https://chronos-ml.github.io/chronos"
Repository = "https://github.com/chronos-ml/chronos"

[tool.hatch.build.targets.wheel]
packages = ["chronos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
